FIXED: spacings of the ROI calculator

--- a/themes/inbeat/assets/scss/partials/_campaign-spend.scss
+++ b/themes/inbeat/assets/scss/partials/_campaign-spend.scss
@@ -23,6 +23,7 @@
       .calc-col {
         flex: 1 1 0;
         min-width: 300px;
+        height: fit-content;
       }
     }
     .calculator-input-section{
@@ -41,7 +42,7 @@
       background: #F9F7F7;
     }
     .calculator-output{
-        padding: 50px 32px 50px 32px;
+        padding: 32px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -55,7 +56,7 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-          padding: 50px 0px;
+          padding: 32px 0px;
           border-bottom:1px solid rgba(0, 0, 0, 0.1);
           @include breakpoint(sm-down){
             padding: 36px 0px;
@@ -300,9 +301,9 @@
   // transition: $transition_default;
 }
 .slider-control-wrapper{
-  margin-top: 24px;
+  // margin-top: 24px;
   .controls-wrapper{
-    padding-top: 16px;
+    // padding-top: 16px;
     @include breakpoint(md-down){
       padding-top: 0;
     }
@@ -327,14 +328,14 @@
   }
 }
 .post-story-count-controller{
-  margin-top: 54px;
+  margin-top: 48px;
   background: #FFFFFF;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border: 1px solid #DCDCDC;
   border-radius: 1px;
-  padding: 24px;
+  padding: 16px;
   .controller-wrapper{
-    padding-bottom: 18px;
+    padding-bottom: 16px;
     border-bottom: 1px solid #DCDCDC;
     // &:first-child{
     // }
@@ -357,7 +358,7 @@
     gap: 24px;
     span{
       font-weight: 400;
-      font-size: 20px;
+      font-size: 18px;
       line-height: 30px;
       margin: 0;
       color: #000000;
